# os-gateway-contract-attributes

./: Cargo.toml  README.md  service.datadog.yaml
.github/workflows/: check-and-publish.yaml
src/: attribute_consts.rs  attribute_event_types.rs  attribute_generator.rs  attribute_keys.rs  lib.rs
